...
      if (uniqueList.isNotEmpty) return uniqueList;
    } catch (_) {}

    return const [
      NotchPayChannel(
        code: 'cm.mtn',
        name: 'MTN Mobile Money',
        countries: ['CM'],
        currencies: ['XAF'],
      ),
      NotchPayChannel(
        code: 'cm.orange',
        name: 'Orange Money',
...
